1998-07-06  Jochen Wiedmann  <joe@ispsoft.de> (1.1920)

	* Makefile.lib (InitializeMsql): Added /usr to the search path
	  for mSQL headers and libraries.
	* tests/msql1.t (unctrl): Renamed "character" column to
	  "chrctr". ("character" is not a valid column name under
	  msql-2.0.4.1)
	* dbd/dbd.xs.in (DBD::mysql::ping): Now using mysql_ping().
	* dbd/dbdimp.c (_MyLogin): Added mysql_compression.

1998-06-25  Jochen Wiedmann  <joe@ispsoft.de> (1.1919)

	* dbd/dbdimp.c: Added $sth->{mysql_type} and
	  $sth->{msql_type}, which are in fact just what
          $sth->{TYPE} used to be. $sth->{TYPE} is now
	  returning portable SQL types.
	* MANIFEST: Removed nodbd/Makefile.PL.in.
	* Makefile.PL: Made test databases configurable.


1998-06-14  Jochen Wiedmann  <joe@ispsoft.de> (1.1918)

	* Makefile.PL: dbdadmin.t was missing in the list of tests
	* nodbd/nodbd.pm.in (query): Now really returning undef in
	  case of errors. (Possible Perl bug?)
	* Makefile.PL: Fixed realclean attribute of WriteMakefile.
	* Makefile.PL (Init): Setting $Data::Dumper::Indent to 1.
	* Makefile.PL (InitializeMsql): Fixed query for mSQL, if
	  only one version gets installed.
	* dbd/dbdimp.c: Now calling mysql_init before mysql_connect.
	* dbd/dbdimp.c: For whatever reason, MyGetProtoInfo was
	  treated like returning a char* under Mysql.


1998-05-16  Jochen Wiedmann  <joe@ispsoft.de> (1.19_17)

	* Makefile.PL: Fixed typo in InitializeMsql (dbiDriver = mSQL1).
	* dbd/dbdimp.c: mysql_real_connect is now using a dbname
	  argument


1998-05-07  Jochen Wiedmann  <joe@ispsoft.de> (1.19_16)

	* dbd/dbdimp.c: ChopBlanks no longer chops from the left side.
	* dbd/dbdimp.c: Fixed memory leak in dbd_st_FETCH_internal.


1998-04-13  Jochen Wiedmann  <joe@ispsoft.de> (1.19_15)

	* Added the DBD::mSQL1 and Msql1 drivers.
	* Fixed minor icompatibilities with perl 5.005.
	* nodbd/nodbd.pm.in (errmsg): Msql->errmsg() should
	  now recognize error messages in $DBI::errstr (hopefully ...)

