@@ -2,7 +2,7 @@
 
 package Bundle::Msql;
 
-$VERSION = '1.19_20';
+$VERSION = '1.19_21';
 
 1;
 
